--- a/exim-sender/exim4.conf
+++ b/exim-sender/exim4.conf
@@ -3,7 +3,7 @@ primary_hostname = \
 hostlist legit_sending_hosts = <; \
    .include /etc/exim4/allowed_hosts
 
-local_interfaces = <; ::0 ; 0.0.0.0
+local_interfaces = <; 0.0.0.0
 
 # Allow any client to use TLS.
 # tls_advertise_hosts = *
@@ -29,6 +29,7 @@ acl_smtp_data = acl_check_data
 ######################################################################
 #                       ACL CONFIGURATION                            #
 
+disable_ipv6 = true
 begin acl
 
 acl_check_rcpt:
